--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">App_Img</string>
+    <string name="app_name">Random Image</string>
     <string name="strRodar">Rodar</string>
 </resources>
